--- a/requirements.txt
+++ b/requirements.txt
@@ -16,15 +16,15 @@ loguru==0.7.3
 Mako==1.3.10
 MarkupSafe==3.0.3
 passlib==1.7.4
-pip==25.2
 pydantic==2.11.9
 pydantic_core==2.33.2
 PyJWT==2.10.1
-python-dotenv===1.1.1
+python-dotenv==1.1.1
 python-multipart==0.0.20
 sniffio==1.3.1
 SQLAlchemy==2.0.43
 starlette==0.48.0
-typing_extensions==4.15.0
 typing-inspection==0.4.1
+typing_extensions==4.15.0
 uvicorn==0.37.0
+win32_setctime==1.2.0
