--- a/alembic.ini
+++ b/alembic.ini
@@ -84,8 +84,12 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = postgresql+asyncpg://ecommerce_user:6258971310892@db:5432/ecommerce_db
 
+
+# sqlalchemy.url = postgresql+asyncpg://ecommerce_user:6258971310892@db:5432/ecommerce_db
+
+sqlalchemy.url = postgresql+asyncpg://ecommerce_user:6258971310892@localhost:5433/ecommerce_db
+# DATABASE_URL="postgresql+asyncpg://ecommerce_user:6258971310892@localhost:5433/ecommerce_db"
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
